src/index.css
/* Define default color scheme in :root vars */
:root {
    --color-foreground: rgb(36, 36, 36);
    --color-background: #fff;

    --card-width: 300px;
    --card-height: 220px;
    --card-background: rgb(250, 250, 250);
    --standard-margin: 1rem;
}
/* Define dark color scheme in media query */
@media (prefers-color-scheme: dark) {
    :root {
        --color-foreground: #fff;
        --color-background: rgb(15, 15, 15);
        --card-background: rgb(34, 34, 34);
    }
}
/* Define default font */
html {
    font-family: sans-serif;
    font-size: 16px;
    scroll-behavior: smooth;
}
/* Define body background color */
body {
    background-color: var(--color-background);
    color: var(--color-foreground);
    margin:0px;
    display:flex;
    justify-content:center;
}
#contentContainer{
    max-width: 1000px;
}
img{
    width: 100%;

}

.menu{
    display:flex;
    justify-content: space-between;
    align-items: center;
    margin-top:var(--standard-margin);
    margin-bottom:var(--standard-margin);
}
.menuLinks{
    display: flex;
    justify-content: space-around;
    align-items: center;
}
.menuTitle{
    margin:var(--standard-margin);
}
.menuLink{
    box-sizing: border-box;
    position:relative;
    transition: all 200ms ease-out 0s;
    text-decoration: none;
    font-weight: bold;
    color: var(--color-foreground);
    margin:var(--standard-margin);
    padding:0.8rem 1.5rem;
    background: linear-gradient(90deg, var(--color-foreground) 50%, var(--color-background) 50%);
    background-size: 200% 100%;
    background-position: 100% 100%;
    border-radius:16px;
    box-shadow: inset 0 0 0 0.18em var(--color-foreground);
}
.menuLink:hover{
    /* border-width: 0px; */
    background-position: 0% 100%;
    color:var(--color-background);
}
.menuSectionLink{
    text-decoration: none;
    font-weight: bold;
    color: var(--color-foreground);
    margin:var(--standard-margin);
    position: relative;
}

.menuSectionLink::before{
    transition: all 200ms ease-out 0s;
    height: 0.17em;
    content: "";
    position: absolute;
    background-color: var(--color-foreground);
    width: 0%;
    bottom: -0.2em;
}
.menuSectionLink:hover::before{
    width: 100%;
}
.hstack{
    display:flex;
    justify-content: flex-start;
}

.cta{
    box-sizing: border-box;
    position:relative;
    transition: all 200ms ease-out 0s;
    text-decoration: none;
    font-weight: bold;
    color: var(--color-foreground);
    margin:var(--standard-margin);
    padding:0.8rem 1.5rem;
    background: linear-gradient(90deg, var(--color-foreground) 50%, var(--color-background) 50%);
    background-size: 200% 100%;
    background-position: 100% 100%;
    border-radius:16px;
    box-shadow: inset 0 0 0 0.18em var(--color-foreground);
}

.cta:hover{
    /* border-width: 0px; */
    background-position: 0% 100%;
    color:var(--color-background);
}

.header{
    margin:var(--standard-margin);
    width: 80%;
}
.header .cta{
    margin-left:0;
}

.card{
    width:var(--card-width);
    height: var(--card-height);
    min-width: var(--card-width);
    min-height: var(--card-height);
    background-color: var(--card-background);
    border-radius: 16px;
    box-shadow: rgba(0, 0, 0, 0.219) 0px 0px 12px -2px;
    overflow: hidden;
    font-size: 0.8rem;
    margin:var(--standard-margin);
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}
.card .title{
    margin:0;
    font-size:1rem;
}
.card .cardText{
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    margin:0.8rem;
    height: 100%;
}

.card .cardText small{
    margin-top: auto;
}
.cardWithImage img{
    border-radius: 16px 16px 0 0;
    height:40%;
    object-fit: cover;
}

.carousel{
    display:flex;
    justify-content: space-between;
    align-items: center;

}

section{
    margin:var(--standard-margin);
}

